<resources>
    <string name="app_name">WalletForTwo</string>
    <string name="icon_calendar">icon_calendar</string>
    <string name="label_today">今日</string>
    <string name="label_remarks">備考</string>
    <string name="label_cancel">キャンセル</string>
    <string name="label_add">追加</string>
    <string name="date">%d/%d/%d</string>
    <string name="label_yen">¥</string>
    <string name="label_edit">編集</string>

    <string name="date_format">%d/%02d/%02d</string>
    <string name="date_format_2">%d/%02d</string>
    <string name="money_format">%,d</string>
    <string name="cost_format">¥%,d</string>

    <string name="label_rent">家賃</string>
    <string name="label_food">食費</string>
    <string name="label_expense">消耗品費</string>
    <string name="label_electric">電気代</string>
    <string name="label_gas">ガス代</string>
    <string name="label_water">水道代</string>
    <string name="label_wifi">回線代</string>
    <string name="label_other">その他</string>
</resources>