<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="5"
            android:layout_marginVertical="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_reflect">
            <CheckBox
                android:id="@+id/rent"
                android:text="@string/label_rent"
                android:textSize="20sp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"/>
            <CheckBox
                android:id="@+id/food"
                android:text="@string/label_food"
                android:textSize="20sp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"/>
            <CheckBox
                android:id="@+id/expense"
                android:text="@string/label_expense"
                android:textSize="20sp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"/>
            <CheckBox
                android:id="@+id/electric"
                android:text="@string/label_electric"
                android:textSize="20sp"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"/>
            <CheckBox
                android:id="@+id/gas"
                android:text="@string/label_gas"
                android:textSize="20sp"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"/>
            <CheckBox
                android:id="@+id/water"
                android:text="@string/label_water"
                android:textSize="20sp"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"/>
            <CheckBox
                android:id="@+id/wifi"
                android:text="@string/label_wifi"
                android:textSize="20sp"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"/>
            <CheckBox
                android:id="@+id/other"
                android:text="@string/label_other"
                android:textSize="20sp"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"/>
            <TextView
                android:id="@+id/all_lift"
                android:text="全て解除"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:background="@color/grid_background"
                android:layout_row="4"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"/>
            <TextView
                android:id="@+id/all_select"
                android:text="全て選択"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:background="@color/grid_background"
                android:layout_row="4"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"/>
        </GridLayout>
        <TextView
            android:id="@+id/button_reflect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="選択した内容を反映"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginHorizontal="5dp"
            android:padding="5dp"
            android:background="@color/grid_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>