<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_margin="30dp"
            android:text="@string/label_cancel"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@color/purple_200"
            app:cornerRadius="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/label_today" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_margin="30dp"
            android:text="@string/label_add"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:enabled="false"
            app:backgroundTint="@color/gray"
            app:cornerRadius="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/label_today" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>